WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
76218
[chromium] event.dataTransfer.types should not return "Text" or "URL"
https://bugs.webkit.org/show_bug.cgi?id=76218
Summary
[chromium] event.dataTransfer.types should not return "Text" or "URL"
Daniel Cheng
Reported
2012-01-12 15:02:37 PST
In crbug.com/76622, we fixed it so we wouldn't return "Text" or "URL" in the types attribute in pastes. We still return in real code though because the ChromiumDataObject implementation was never updated.
Attachments
Patch
(10.01 KB, patch)
2012-01-24 15:02 PST
,
Daniel Cheng
no flags
Details
Formatted Diff
Diff
Patch
(12.97 KB, patch)
2012-01-24 15:21 PST
,
Daniel Cheng
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Daniel Cheng
Comment 1
2012-01-24 15:02:41 PST
Created
attachment 123819
[details]
Patch
Tony Chang
Comment 2
2012-01-24 15:13:45 PST
Comment on
attachment 123819
[details]
Patch Would be nice to get an ews run. Also, you may need to add the new test to all the relevant Skipped files. Yael, do you know why all the dropzone tests are disabled on the qt bots?
Daniel Cheng
Comment 3
2012-01-24 15:21:00 PST
Created
attachment 123824
[details]
Patch
Daniel Cheng
Comment 4
2012-01-24 15:48:31 PST
Comment on
attachment 123824
[details]
Patch Clearing flags on attachment: 123824 Committed
r105826
: <
http://trac.webkit.org/changeset/105826
>
Daniel Cheng
Comment 5
2012-01-24 15:48:35 PST
All reviewed patches have been landed. Closing bug.
Yael
Comment 6
2012-01-24 17:18:53 PST
(In reply to
comment #2
)
> (From update of
attachment 123819
[details]
) > Would be nice to get an ews run. Also, you may need to add the new test to all the relevant Skipped files. Yael, do you know why all the dropzone tests are disabled on the qt bots?
Qt does not have test infrastructure for drag&drop.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug