[chromium] event.dataTransfer.types should not return "Text" or "URL" https://bugs.webkit.org/show_bug.cgi?id=76218

Source/WebCore:

Per the spec, "Text" and "URL" are special values handled for IE compatibility reasons in
dataTransfer.setData() and dataTransfer.getData(). These values should not be exposed
elsewhere.

Reviewed by Tony Chang.

Test: fast/events/dropzone-005.html

* platform/chromium/ChromiumDataObject.cpp:
(WebCore::ChromiumDataObject::types):
(WebCore::ChromiumDataObject::getData):
* platform/chromium/DragDataChromium.cpp:
(WebCore::DragData::containsURL):
(WebCore::DragData::asURL):
(WebCore::DragData::canSmartReplace):

LayoutTests:

Reviewed by Tony Chang.

* editing/pasteboard/dataTransfer-setData-getData-expected.txt:
* fast/events/dropzone-002.html:
* fast/events/dropzone-005-expected.txt: Added.
* fast/events/dropzone-005.html: Modified from LayoutTests/fast/events/dropzone-002.html.
* platform/efl/Skipped:
* platform/gtk/Skipped:
* platform/mac-wk2/Skipped:
* platform/qt/Skipped:
* platform/win-wk2/Skipped:

Canonical link: https://commits.webkit.org/93833@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105826 268f45cc-cd09-0410-ab3c-d52691b4dbfc